cmake_minimum_required(VERSION 3.15)
project(Fusion)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE "Release")
add_subdirectory("Fusion")
add_subdirectory("Examples/Advanced")
add_subdirectory("Examples/Simple")
# if(CMAKE_BUILD_TYPE STREQUAL "Debug")
#     add_subdirectory("Python/Python-C-API") # do not include when run by CI
# endif()
