<?xml version="1.0"?>
<package>
  <name>slam_catkin</name>
  <version>1.0.0</version>
  <description>zc_3DSLAM</description>

  <maintainer email="664956261@qq.cpm.com">zhang cheng</maintainer>

  <license>BSD</license>

  <author >zhang cheng</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <build_depend>rosbag_storage</build_depend>
  <run_depend>rosbag_storage</run_depend>

  <build_depend>tf2_ros</build_depend>
  <run_depend>tf2_ros</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensors_msgs</build_depend>
  <run_depend>sensors_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

</package>
